--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Install Dependencies & Build
         run: |
-          npm ci
+          npm i
           npm run build
 
       - name: Set Up SSH
